--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </section>
 
     <section class="main-content">
+    <div>
+                            <div class="fleft bg_dian" style="background-position:0px 18px;">·<a href="http://bj.bendibao.com/gouwu/20141015/167403.shtm" target="_blank">物美大卖场10月”火锅节”hot起来系列主题促销活动</a></div>
+                                                <div class="right c_999 ft12">2014-10-15</div><div class="clear"></div>
+                                                                </div>
       <h1>
 <a id="chaoshitiegithubio" class="anchor" href="#chaoshitiegithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>chaoshitie.github.io</h1>
 
