--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">超市贴－－超市社区博客</h1>
+      <h1 class="project-name">超市贴－－超市社区</h1>
       <h2 class="project-tagline">超市贴</h2>
     </section>
 
