--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>超市贴－－超市社区博客 by chaoshitie</title>
+    <title>广州辉凡信息科技有限公司</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">超市贴－－超市社区</h1>
-      <h2 class="project-tagline">超市贴</h2>
+      <h1 class="project-name">广州辉凡信息科技有限公司</h1>
     </section>
 
     <section class="main-content">
@@ -20,7 +19,7 @@
       <h1>
 <a id="chaoshitiegithubio" class="anchor" href="#chaoshitiegithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>chaoshitie.github.io</h1>
 
-<p>超市贴</p>
+
 
                             <div class="fleft bg_dian" style="background-position:0px 18px;">·<a href="http://bj.bendibao.com/gouwu/20141015/167403.shtm" target="_blank">物美大卖场10月”火锅节”hot起来系列主题促销活动</a></div>
                                                 <div class="right c_999 ft12">2014-10-15</div><div class="clear"></div>
